--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <span>  <p id="c">  Work Solutions </p></span> 
                       <span><i class="fa-solid fa-heart-circle-bolt" style="color: #ff0080;"></i>
                         <span> <p id="d">  Support </p></span> 
-                        <span><i class="fa-duotone fa-coin-front"></i></span>
+                        <span><i class="fa-solid fa-coins"></i></span>
                         <span><p id="e">  Donate </p></span>
                         </section>
 
