--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <span>  <p id="c">  Work Solutions </p></span> 
                       <span><i class="fa-solid fa-heart-circle-bolt" style="color: #ff0080;"></i>
                         <span> <p id="d">  Support </p></span> 
-                        <span><i class="fa-light fa-coin-front"></i></span>
+                        <span><i class="fa-solid fa-coins"></i></span>
                         <span><p id="e">  Donate </p></span>
                         </section>
 
@@ -69,7 +69,7 @@
               <div class="container p-4 pb-0">
                 <img id="logo" src="https://static.vecteezy.com/system/resources/previews/010/148/722/original/dollar-money-icon-sign-symbol-design-free-png.png" alt="logo"/>
                 <h3>Raise the Wage of Gender</h3>
-                <h3> Follow us </h3>
+                <h3> Follow us @ </h3>
                 <section class="mb-4">
                   <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
                      ><i class="fa-brands fa-discord"></i>
