--- a/index6.html
+++ b/index6.html
@@ -35,7 +35,6 @@
                 <p class="col"> We are students at Guttman Community College. Our majors are Information Technology. Throughout this assignment we got to learn and get in depth about the gender wage gap and how it is affecting women who are in the workforce. We also talked about solutions that should be given or recommended that can help fix the wage issues.</p>
               </div>
             </div>
-          </div>
           <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
@@ -47,7 +46,7 @@
               <img src="https://us.res.keymedia.com/files/image/iStock-equal-pay-gender.jpg"  alt="alt"width="500" height="300" class="moar"><div></div>
             </div>
           </div>
-          </div>
+        <center>
           <div class="border">
             <section class="references">
               <div class="jumbotron">
@@ -89,6 +88,7 @@
                 <div>
                 </div>
             </section>
+            </center>
             
               <section id="contact">
  <div class="jumbotron">
