--- a/index4.html
+++ b/index4.html
@@ -41,7 +41,7 @@
       <p>It should be noted that the wage here includes the basic salary or cash wage, the family allowance, the cost-of-living allowance, the certificate premium, the educational level, and any bonuses for the profession. The wages of workers in the private sector in Palestine will also be covered in this part. Workers in the public sector will be excluded because all public sectors are subject to the Palestinian Civil Service Law. Therefore, there is no gap in the wage gender gap for this sector.</p>
     </div>
       </center>
-    <div id="2-right">
+    <div id="info">
       <div class="container p-3 my-3">
         <img src='https://static01.nyt.com/images/2014/11/15/business/money/money-superJumbo.jpg' alt='Gender Differences of pay' width="500" height="333">
       </div>
