--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
               </div>
           </div>
            </section>
+      <center>
               <p class="lead"><a class="btn btn-warning btn-lg" href='https://irle.berkeley.edu/publications/irle-policy-brief/state-policy-strategies-for-narrowing-the-gender-wage-gap/' role="button"> Get in Touch</a></section><div>
+                </center>
                 <section id="orange">
                   <h2 id="a"> Services </h2> 
                   <h4 id="a"> What Do We Offer <h4>
