--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="index5.html"> Solutions</a></li>
         <li><a href="index6.html"> About us!</a></li>
         <li><a href="indexa.html"> Languages:عربي <a></li>
-
+ </header></ul>
     <body class="blue">
       <div class="jumbotron text-center"> 
         <div class="container-fluid lg p-3 my-3 bg-dark text-white">
