--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                       <span><i class="fa-solid fa-heart-circle-bolt" style="color: #ff0080;"></i>
                         <span> <p id="d">  Support </p></span> 
                         <span><i class="fa-solid fa-coins"></i></span>
-                        <span><p id="e">  Donate </p></span>
+                        <span><p id="e">  Donate </p></span> </section>
                         <footer>
           <footer>
             <div class="footer-content">
