--- a/index.html
+++ b/index.html
@@ -1,116 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Gender Wage Gap</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="https://assets.materialup.com/uploads/bcf6dd06-7117-424f-9a6e-4bb795c8fb4d/preview.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/c3fb5cc9b7.js" crossorigin="anonymous"></script>
-  <link href="styles.css" rel="stylesheet"/>
-</head>
+  <head>
+    <title>Gender Wage Gap</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://assets.materialup.com/uploads/bcf6dd06-7117-424f-9a6e-4bb795c8fb4d/preview.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/c3fb5cc9b7.js" crossorigin="anonymous"></script>
+    <link href="styles.css" rel="stylesheet"/>
+  </head>
+</html>
+<div class="container-fluid">
+  <header class="container-fluid"><ul>
+      <nav class="navbar navbar-expand-md navbar-dark ">
+        <a class="navbar-brand"> <img id="logo" src="https://static.vecteezy.com/system/resources/previews/010/148/722/original/dollar-money-icon-sign-symbol-design-free-png.png" alt="logo"/></a>
+        <li><a class="home" href="index.html">Home</a></li>
+        <li><a href="index2.html"> Overview</a></li>
+        <li><a href="index3.html"> The Wage Issue</a></li>
+        <li><a href="index4.html"> Work Wage Differences</a></li>
+        <li><a href="index5.html"> Solutions</a></li>
+        <li><a href="index6.html"> About us!</a></li>
+        <li><a href="indexa.html"> Languages:عربي <a></li>
+      </header></ul>
 
-<body class="blue">
-  <div class="container-fluid">
-    <header>
-      <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="#"><img id="logo" src="https://static.vecteezy.com/system/resources/previews/010/148/722/original/dollar-money-icon-sign-symbol-design-free-png.png" alt="logo"/></a>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link home" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="index2.html">Overview</a></li>
-          <li class="nav-item"><a class="nav-link" href="index3.html">The Wage Issue</a></li>
-          <li class="nav-item"><a class="nav-link" href="index4.html">Work Wage Differences</a></li>
-          <li class="nav-item"><a class="nav-link" href="index5.html">Solutions</a></li>
-          <li class="nav-item"><a class="nav-link" href="index6.html">About Us!</a></li>
-          <li class="nav-item"><a class="nav-link" href="indexa.html">Languages: عربي</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div class="jumbotron text-center bg-dark text-white">
-      <h1>Gender Pay Gap Issues</h1>
-    </div>
-
-    <div class="container pt-3 my-3">
-      <h3>Why is Gender Wage Gap an Issue?</h3>
-    </div>
-
-    <section>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="280417-32977-body.png" width="500" height="300" class="img-thumbnail" alt="Gender Wage Gap Illustration">
-          </div>
-          <div class="col-md-6 pt-3">
-            <p>
-              <a class="redorange" href="https://data.unwomen.org/country/state-of-palestine">
-                On average, Palestinian women make 27% less money than Palestinian males.
-              </a>
-              Because of their differences in gender, men and women will always get paid differently from one another, regardless of whether they have the same occupations. Many women in the workforce work harder than men do because of the difficulties they encounter at work. They also deal with unequal opportunities and find it challenging to bridge career gaps by returning to the profession. Despite all of the challenges they confront at work, women consistently put in more effort than men.
-            </p>
-            <p>
-              In actuality, there are over 7,000 firms owned and run by women in Palestine, compared to 16% of males of working age. Only 3.5% of women in Palestine between the ages of 15 and 64 set up their own businesses. These women put forth a lot of effort to get the money they deserve.
-            </p>
-          </div>
+    <body class="blue">
+      <div class="jumbotron text-center"> 
+        <div class="container-fluid lg p-3 my-3 bg-dark text-white">
+          <h1>Gender Pay Gap Issues</h1>
         </div>
       </div>
-    </section>
-
-    <div class="container text-center my-4">
+      <div>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+        <div class="container pt-3 my-3">
+          <h3> Why is Gender Wage Gap an Issue?</h3>
+        </div>
+        <section>
+          
+          <div class="container">
+              <div class="row">
+                <div class="col"> <img src="280417-32977-body.png" width="500" height="300" class="img-thumbnail"></div>
+              
+              <p class="col container pt-3"><a class="redorange" href="https://data.unwomen.org/country/state-of-palestine">On average, Palestinian women make 27% less money than Palestinian males.</a> Because of their differences in gender, men and women will always get paid differently from one another, regardless of whether they have the same occupations. Many women in the workforce work harder than men do because of the difficulties they encounter at work. They also deal with unequal opportunities and find it challenging to bridge career gaps by returning to the profession. Despite all of the challenges they confront at work, women consistently put in more effort than men. <p class="container pt-3"> In actuality, there are over 7,000 firms owned and run by women in Palestine, compared to 16% of males of working age. Only 3.5% of women in Palestine between the ages of 15 and 64 set up their own businesses. These women put forth a lot of effort to get the money they deserve.</p> </div>
+              </div>
+          </div>
+             <div class="container text-center my-4">
       <a class="btn btn-warning btn-lg" href="https://irle.berkeley.edu/publications/irle-policy-brief/state-policy-strategies-for-narrowing-the-gender-wage-gap/" role="button">
         Get in Touch
       </a>
-    </div>
+           </div>
+                  <h2 id="a"> Services </h2> 
+                  <h4 id="a"> What Do We Offer <h4>
+                      <span><i class="fa-sharp fa-solid fa-star " style="color: #ffff00;"></i></span>
+                      <span>  <p id="b">  Justice </p></span> 
+                      <span><i class="fa-solid fa-wrench"></i></span>
+                      <span>  <p id="c">  Work Solutions </p></span> 
+                      <span><i class="fa-solid fa-heart-circle-bolt" style="color: #ff0080;"></i>
+                        <span> <p id="d">  Support </p></span> 
+                        <span><i class="fa-solid fa-coins"></i></span>
+                        <span><p id="e">  Donate </p></span>
+                        </section>
 
-    <section id="orange" class="container text-center my-5">
-      <h2 id="a">Services</h2>
-      <h4>What Do We Offer</h4>
-      <div class="row justify-content-center">
-        <div class="col-md-2">
-          <i class="fa-sharp fa-solid fa-star" style="color: #ffff00;"></i>
-          <p id="b">Justice</p>
-        </div>
-        <div class="col-md-2">
-          <i class="fa-solid fa-wrench"></i>
-          <p id="c">Work Solutions</p>
-        </div>
-        <div class="col-md-2">
-          <i class="fa-solid fa-heart-circle-bolt" style="color: #ff0080;"></i>
-          <p id="d">Support</p>
-        </div>
-        <div class="col-md-2">
-          <i class="fa-solid fa-coins"></i>
-          <p id="e">Donate</p>
-        </div>
-      </div>
-    </section>
+                        <footer>
+          <footer>
+            <div class="footer-content">
+              <div class="container p-4 pb-0">
+                <img id="logo" src="https://static.vecteezy.com/system/resources/previews/010/148/722/original/dollar-money-icon-sign-symbol-design-free-png.png" alt="logo"/>
+                <h3>Raise the Wage of Gender</h3>
+                <h3> Follow us </h3>
+                <section class="mb-4">
+                  <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                     ><i class="fa-brands fa-discord"></i>
+                    </a>
+                  <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                     ><i class="fab fa-twitter"></i
+                    ></a>
+                  <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                     ><i class="fab fa-google"></i
+                    ></a>
 
-    <footer class="bg-dark text-white mt-5">
-      <div class="container p-4 pb-0 text-center">
-        <img id="logo" src="https://static.vecteezy.com/system/resources/previews/010/148/722/original/dollar-money-icon-sign-symbol-design-free-png.png" alt="logo"/>
-        <h3>Raise the Wage of Gender</h3>
-        <h3>Follow us @</h3>
-        <section class="mb-4">
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fa-brands fa-discord"></i></a>
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fa-solid fa-blog"></i></a>
-        </section>
-      </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2023 Copyright & Publish By:
-        <span class="text-white">Western Equinox / Guttman CUNY</span> — Sponsored by GSACS Team
-      </div>
-    </footer>
-  </div>
+                  <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                     ><i class="fab fa-instagram"></i
+                    ></a>
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
-</body>
-</html>
+                  <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                     ><i class="fab fa-linkedin-in"></i
+                    ></a>
+                  <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                      ><i class="fa-solid fa-blog"></i>
+                    </a>
+                </section>
+              </div>
+              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2023 Copyright & Publish By:
+                <a class="text-white">Western Equinox/Guttman CUNY</a>
+                 /Sponsor By GSACS Team
+              </div>
 
+          </footer>
+        </footer>
+        </body>
+        </html>
+                        </head> 
+                   </body>
+               </section>
+           </div>
+     </body>
+ </html>
