--- a/index.html
+++ b/index.html
@@ -52,17 +52,28 @@
         Get in Touch
       </a>
            </div>
-                  <h2 id="a"> Services </h2> 
-                  <h4 id="a"> What Do We Offer <h4>
-                      <span><i class="fa-sharp fa-solid fa-star " style="color: #ffff00;"></i></span>
-                      <span>  <p id="b">  Justice </p></span> 
-                      <span><i class="fa-solid fa-wrench"></i></span>
-                      <span>  <p id="c">  Work Solutions </p></span> 
-                      <span><i class="fa-solid fa-heart-circle-bolt" style="color: #ff0080;"></i>
-                        <span> <p id="d">  Support </p></span> 
-                        <span><i class="fa-solid fa-coins"></i></span>
-                        <span><p id="e">  Donate </p></span>
-                        </section>
+      <section id="orange" class="container text-center my-5">
+      <h2 id="a">Services</h2>
+      <h4>What Do We Offer</h4>
+      <div class="row justify-content-center">
+        <div class="col-md-2">
+          <i class="fa-sharp fa-solid fa-star" style="color: #ffff00;"></i>
+          <p id="b">Justice</p>
+        </div>
+        <div class="col-md-2">
+          <i class="fa-solid fa-wrench"></i>
+          <p id="c">Work Solutions</p>
+        </div>
+        <div class="col-md-2">
+          <i class="fa-solid fa-heart-circle-bolt" style="color: #ff0080;"></i>
+          <p id="d">Support</p>
+        </div>
+        <div class="col-md-2">
+          <i class="fa-solid fa-coins"></i>
+          <p id="e">Donate</p>
+        </div>
+      </div>
+    </section>
 
                         <footer>
           <footer>
