--- a/index4.html
+++ b/index4.html
@@ -41,13 +41,13 @@
       <p>It should be noted that the wage here includes the basic salary or cash wage, the family allowance, the cost-of-living allowance, the certificate premium, the educational level, and any bonuses for the profession. The wages of workers in the private sector in Palestine will also be covered in this part. Workers in the public sector will be excluded because all public sectors are subject to the Palestinian Civil Service Law. Therefore, there is no gap in the wage gender gap for this sector.</p>
     </div>
       </center>
-    <center>
-    <div id="right">
-      <div class="container p-3 my-3">
-        <img src='https://static01.nyt.com/images/2014/11/15/business/money/money-superJumbo.jpg' alt='Gender Differences of pay' width="500" height="333">
-      </div>
-    </div>
-      </center>
+  <div class="container p-3 my-3 text-center">
+  <img src="https://static01.nyt.com/images/2014/11/15/business/money/money-superJumbo.jpg" 
+       alt="Gender Differences of Pay" 
+       width="500" 
+       height="333">
+</div>
+
     <div class="container p-3 my-3 bg-info text-black ">
       <h4> Educational Earning</h4>
       <p><em> On average, men are paid $1,219 per week and women $1,002. Earnings increase with education.<br> With less than a high school diploma, men receive $745/week and women $594. With an advanced degree, men are paid $1,998 and women $1,546.</em></p>
