--- a/index6.html
+++ b/index6.html
@@ -22,12 +22,12 @@
           <li><a href="index3.html">The Wage Issue</a></li>
           <li><a href="index4.html"> Work Wage Differences</a></li>
           <li><a href="index5.html"> Solutions</a></li>
-          <li><a class="about" href="index6.html"> About us!</a></li>
+          <li><a class="about" href="index6.html"> About Us!</a></li>
           <li><a href="indexa.html"> Languages: عربي</a></li>
         </header></ul>    
     </header>
     <div class="jumbotron">
-      <h2 class="display-4"> About us!<h2>
+      <h2 class="display-4"> About Us!<h2>
           </div>
           <div class="container-fluid">
               <div class="row">
