--- a/index5.html
+++ b/index5.html
@@ -22,7 +22,7 @@
       <a><img id="logo" src="https://static.vecteezy.com/system/resources/previews/010/148/722/original/dollar-money-icon-sign-symbol-design-free-png.png" alt="logo"/></a>
         <ul>
           <li><a href="indexa.html"> Languages: عربي</a></li>
-          <li><a href="index6.html" > About us!</a></li>
+          <li><a href="index6.html" > About Us!</a></li>
           <li><a class="result" href="index5.html"> Solutions</a></li>
           <li><a href="index4.html"> Work Wage Differences</a></li>
           <li><a href="index3.html">The Wage Issue</a></li>
