--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="index3.html"> The Wage Issue</a></li>
         <li><a href="index4.html"> Work Wage Differences</a></li>
         <li><a href="index5.html"> Solutions</a></li>
-        <li><a href="index6.html"> About us!</a></li>
+        <li><a href="index6.html"> About Us!</a></li>
         <li><a href="indexa.html"> Languages:عربي <a></li>
       </header></ul>
 
