--- a/index5.html
+++ b/index5.html
@@ -35,12 +35,12 @@
         <h1>Solutions to Unequity Gender Wages Issues</h1>
         <h4>There always light at the end of the tunnel</h4>
       </div>
-      <div class="middle2">
-        <div class="container p-3 my-3">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Hack_The_Gender_gap_Logo_Icons.jpg" class alt='Close the Gap' width=550" height="250">
-        </div>
-      </div>
-    </div>
+<div class="container p-3 my-3 text-center">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Hack_The_Gender_gap_Logo_Icons.jpg" 
+       alt="Close the Gap" 
+       width="550" 
+       height="250">
+</div>
     <div class="container p-3">
       <h3>Raise Awareness Regarding Gender Equality</h3>
       <p>Increasing awareness is key to confronting entrenched social norms and attitudes about gender roles. As such, the Ministry of Women’s Affairs and MoL can cooperate with civil society organizations, business women’s associations and international institutions such as UN Women. Together, they can organize public awareness campaigns and introduce capacity-building initiatives to promote gender equality and encourage a more gender-balanced redistribution of the responsibility of unpaid care work. Awareness-raising should also target younger generations, introducing gender equality in curricular at various educational levels. These efforts can capitalize on positive attitudes that have recently surfaced in Palestinian society. Greater awareness-raising could further sway men towards gender equality.</p>
