--- a/index5.html
+++ b/index5.html
@@ -30,66 +30,73 @@
           <li><a href="index.html">Home</a></li>
         </ul>
     </header>
-    <div class="jumbotron">
-      <div class="container p-3">
-        <h1>Solutions to Unequity Gender Wages Issues</h1>
-        <h4>There always light at the end of the tunnel</h4>
-      </div>
-<div class="container p-3 my-3 text-center">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Hack_The_Gender_gap_Logo_Icons.jpg" 
-       alt="Close the Gap" 
-       width="550" 
-       height="250">
+<div class="jumbotron">
+  <div class="container p-3">
+    <h1>Solutions to Unequity Gender Wages Issues</h1>
+    <h4>There is always light at the end of the tunnel</h4>
+  </div>
+
+  <div class="container p-3 my-3 text-center">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Hack_The_Gender_gap_Logo_Icons.jpg" 
+         alt="Close the Gap" 
+         width="550" 
+         height="250">
+  </div>
+
+  <div class="container p-3">
+    <h3>Raise Awareness Regarding Gender Equality</h3>
+    <p>
+      Increasing awareness is key to confronting entrenched social norms and attitudes about gender roles. The Ministry of Women’s Affairs and MoL can cooperate with civil society organizations, business women’s associations, and international institutions such as UN Women. Together, they can organize public awareness campaigns and introduce capacity-building initiatives to promote gender equality and encourage a more gender-balanced redistribution of the responsibility of unpaid care work. Awareness-raising should also target younger generations, introducing gender equality in curricula at various educational levels. These efforts can capitalize on positive attitudes that have recently surfaced in Palestinian society. Greater awareness-raising could further sway men towards gender equality.
+    </p>
+  </div>
+
+  <div class="container p-3">
+    <h3>Redistribute the Responsibility for Unpaid Care Work</h3>
+    <p>
+      Reducing the time that women spend on unpaid care is vital to expand their opportunities to enter the labour market. The Government should mobilize resources to enforce the newly ratified education law to make kindergarten education universal. Since the market has failed to expand nursery services, the Government should intervene to establish more public nurseries or provide financial incentives to the private sector and NGOs to deliver these services. Given fiscal challenges, different provision models and financing options should be explored.
+    </p>
+    <p>
+      Ultimately, redistributing the responsibility of unpaid care work between women and men is key. Paternity leave is commonly used in several countries. While it might be ineffective in Palestine in the short term due to deeply rooted gendered divisions of labour, it could be effective in the long run if coupled with awareness-raising on gender equality.
+    </p>
+  </div>
+
+  <div class="container p-3">
+    <h4>Progress Solutions</h4>
+    <ul>
+      <li>
+        <p>
+          The Palestinian Government has made positive strides in elevating gender equality and women’s rights. Formal commitments to international frameworks, national strategies, and statistical data gathering exist. While much of it remains symbolic, it creates space for practical initiatives. However, impact on the status of Palestinian women remains limited. Reports and interviews indicate systemic structural obstacles to realizing civil and human rights.
+        </p>
+      </li>
+      <li>
+        <p>
+          MoWA, in partnership with women’s civil society organizations, has played a critical role in bringing gender equality, women’s empowerment, and social justice to the forefront of the government’s agenda—including pushing through new and adapted policies.
+        </p>
+      </li>
+    </ul>
+  </div>
+
+  <div class="container p-3">
+    <h3>Support Fair Scheduling Practices</h3>
+    <p>
+      Women—especially women of color—are more likely to work in low-wage jobs with rigid, unpredictable schedules. This makes it difficult for working parents, especially mothers, to arrange child care. Legislation in Vermont and San Francisco provides a “right to request,” allowing workers to ask for flexibility or predictability without risking their jobs. Keeping a job is essential to closing the gender pay gap.
+    </p>
+  </div>
+
+  <div class="container p-3">
+    <h3>Support Pay Transparency</h3>
+    <p>
+      When women cannot discuss their salaries, they often don’t know they’re being paid less than male colleagues for the same work. The Paycheck Fairness Act would reduce pay secrecy, give women tools to address discrimination, and make it harder for companies to justify unequal pay.
+    </p>
+  </div>
+
+  <div class="container p-3">
+    <h3>Society Results</h3>
+    <p>
+      The gender wage gap is real—and it hurts women across the board. It’s often dismissed as a statistical artifact, but occupational differences are shaped by gender bias. Serious efforts to understand the gap must avoid blaming women and instead examine how the economy provides unequal opportunities at every stage of education, training, and career development.
+    </p>
+  </div>
 </div>
-    <div class="container p-3">
-      <h3>Raise Awareness Regarding Gender Equality</h3>
-      <p>Increasing awareness is key to confronting entrenched social norms and attitudes about gender roles. As such, the Ministry of Women’s Affairs and MoL can cooperate with civil society organizations, business women’s associations and international institutions such as UN Women. Together, they can organize public awareness campaigns and introduce capacity-building initiatives to promote gender equality and encourage a more gender-balanced redistribution of the responsibility of unpaid care work. Awareness-raising should also target younger generations, introducing gender equality in curricular at various educational levels. These efforts can capitalize on positive attitudes that have recently surfaced in Palestinian society. Greater awareness-raising could further sway men towards gender equality.</p>
-    </div>
-    <div class="container p-3">
-      <h3>Redistribute the Responsibility for Unpaid Care Work</h3>
-      <p>Reducing the time that women spend on unpaid care is vital to expand their opportunities to enter the labour market. To this end, the Government should mobilize resources to enforce the newly ratified education law to make kindergarten education universal. Furthermore, since the market has failed to expand nursery services, as few young children are enrolled in nurseries, the Government should intervene to establish more public nurseries or provide financial incentives to the private sector and NGOs to deliver these services. Given the fiscal challenges facing the Palestinian Government, different provision models and financing options, in collaboration with the private sector, should be explored</p>
-
-      <p> Ultimately, redistributing the responsibility of unpaid care work between women and men is key. To this end, paternity leave is commonly used in several countries. Such a policy might be ineffective in Palestine in the short-term, given the deeply rooted gendered division of labour. However, paternity leave could be effective in the long run, if coupled with awareness-raising on gender equality</p>
-    </div>
-    <div class="container p-3">
-      <h4>Progress Solutions</h4>
-
-      <ul>
-
-        <li><p> The Palestinian Government and its leadership have made positive strides in elevating the issue of gender equality and women’s rights in its agenda. There are formal commitments made to international normative frameworks, national strategies, policies and statistical data gathering to promote this issue. While it is largely rhetoric and symbolic than substantive, it does create space and resources to take forward practical initiatives. However, the result to date is very limited impact on the status of Palestinian women. Reports, studies, statistical data and interviews indicate that women and girls encounter systemic structural obstacles toward the realization of their civil and human rights</p></li>
-
-        <li><p> MoWA, in partnership with the women’s civil society organizations, has played a critical role in bringing gender equality, women’s empowerment and social justice to the forefront of the government’s agenda including pushing through new and adapted policies </p></li>
-        <div>
-
-      </ul>
-
-      <section>
-    </div>
-    <div>
-      <div class="container p-3">
-        <h3>Support fair scheduling practices</h3>
-
-        <p>Women, especially women of color, are more likely to work in low-wage jobs and often have rigid, unpredictable schedules that can change with little notice, making it difficult for working parents—especially mothers—to anticipate their schedules and arrange for child care. These workers risk losing their job because they lack the flexibility to alter their schedules when they need to take their child to the dentist or pick up a sick child from school—tasks that are more likely to fall to mothers than fathers. Legislation has been passed in Vermont and San Francisco in the past year that provides workers with a “right to request,” allowing them to ask for greater flexibility or scheduling predictability from their employer without jeopardizing their job. Being able to keep a job is essential to closing the gender pay gap.</p>
-
-      </div>
-    </div>
-    <div>
-      <div class="container p-3">
-        <h3>Support pay transparency</h3>
-
-        <p>When women are not able to discuss their salaries with their colleagues, they often cannot tell when they are making less than their male colleagues for doing the same job. The Paycheck Fairness Act would reduce pay secrecy, give women better tools to address pay discrimination, and make it more difficult for companies to pay male workers more than female workers—an important tool in combatting the gender wage gap.</p>
-
-      </div>
-    </div>
-    <div>
-      <div class="container p-3">
-        <h3> Society Results</h3>
-
-        <p>The gender wage gap is real—and hurts women across the board. Too often it is assumed that this gap is not evidence of discrimination, but is instead a statistical artifact of failing to adjust for factors that could drive earnings differences between men and women. However, these factors—particularly occupational differences between women and men—are themselves affected by gender bias. Serious attempts to understand the gender wage gap should not include shifting the blame to women for not earning more. Rather, these attempts should examine where our economy provides unequal opportunities for women at every point of their education, training, and career choices.</p>
-
-      </div>
-    </div>
-
   </section>
   <footer>
     <div class="footer-content">
