--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </section>
               </div>
               <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2023 Copyright & Publish By:
+                © 2023 Publish By:
                 <a class="text-white" href="https://sammocode.github.io/medpl150-Samuel-Clarke/index.html">Westward Equinox/CUNY Guttman</a>
                  /Sponsor By GSACS Team
               </div>
