--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </div>
               <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 © 2023 Publish By:
-                <a class="text-white" href="https://sammocode.github.io/medpl150-Samuel-Clarke/index.html">Westward Equinox/CUNY Guttman</a>/Sponsor By GSACS Team
+                <a class="text-white" href="https://sammocode.github.io/medpl150-Samuel-Clarke/index.html">Westward Equinox</a>| CUNY Guttman | Sponsor By GSACS Team
               </div>
 
           </footer>
