--- a/index3.html
+++ b/index3.html
@@ -83,9 +83,8 @@
                 </section>
               </div>
               <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2023 Copyright & Publish by:
-                <a class="text-white">Western Equinox/Guttman CUNY</a>
-                 /Sponsor By GSACS Team
+                © 2023 Publish By:
+                <a class="text-white">Westward Equinox</a>| Guttman CUNY | Sponsor By GSACS Team
               </div>
 
           </footer>
