--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </section>
               </div>
               <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2023 Publish By:
-                <a class="text-white" href="https://sammocode.github.io/medpl150-Samuel-Clarke/index.html">Westward Equinox</a> | CUNY Guttman | Sponsor By GSACS Team
+                © Publish By:
+                <a class="text-white" href="https://sammocode.github.io/medpl150-Samuel-Clarke/index.html">Westward Equinox,</a> 2023 | CUNY Guttman | Sponsor By GSACS Team
               </div>
 
           </footer>
