--- a/index2.html
+++ b/index2.html
@@ -117,7 +117,7 @@
               </div>
               <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 © 2023 Publish By:
-                <a class="text-white">Westward Equinox</a> | CUNY Guttman | Sponsor By GSACS Team
+                <a class="text-white">Westward Equinox,</a> 2023 | CUNY Guttman | Sponsor By GSACS Team
               </div>
 
           </footer>
