--- a/index6.html
+++ b/index6.html
@@ -188,8 +188,8 @@
                       </section>
                     </div>
                     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                      © 2023 Publish By:
-                <a class="text-white">Westward Equinox</a> | CUNY Guttman | Sponsor By GSACS Team
+                      © Publish By:
+                <a class="text-white">Westward Equinox, </a> 2023 | CUNY Guttman | Sponsor By GSACS Team
                     </div>
 
                 </footer>
