--- a/index5.html
+++ b/index5.html
@@ -130,7 +130,7 @@
             </section>
           </div>
           <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2023 Publish By:
+            © Publish By:
                 <a class="text-white">Westward Equinox,</a> 2023 | CUNY Guttman | Sponsor By GSACS Team
           </div>
 
