--- a/index4.html
+++ b/index4.html
@@ -123,7 +123,13 @@
     <h4 class="container p-3"> In terms of respresenation rate in other countries</h4>
     <p> Women are also underrepresented in the Palestinian work force, according to the Palestinian PCBS report. The female Palestinian participation rate in the labor force was 19.3%, while the male participation rate was 71.6%. The female participation rate, however, has nearly doubled in the past 15 years, from 10.3% in 2001, to 19.3% in 2016.</p>
     <p><u><b> In Education:</b></u> A 2016 report by the International Labor Organization found that the wage gap among Palestinians decreased with university education attainment, from nearly 50% with just a high-school education, down to 13% with a bachelor’s or master’s degree. However, educated Palestinian women are facing high unemployment. In 2015, according to the PCBS, women with 13 years of education had a 48% unemployment rate. The general unemployment rate in 2015 was 39.2% among women, and 22.5% among men.</p>
-    <p><u><b> In Employment Rate:</b></u> Unemployed women are younger than employed women, and on average, they have more schooling. For example, in 2001 employed rural females had an average of 5 years of schooling less than their unemployed counterparts.  Unemployed men, on the other hand, are younger but they are less educated than employed men. This is manifested in the ratio of male/female unemployment rate which was 3.5 in 2001, but 1.4 in 1999 for rural areas. Since most of Palestinian who worked in Israel came from villages and had fewer years of education, the wage gap is mostly attributable to mobility restrictions between Israel and the Palestinian labor markets. Female participation rates dropped the most in rural areas (2.8 percentage points between the two years) where the employed/unemployed schooling gap is the largest.
+    <p><u><b> In Employment Rate:</b></u> Unemployed women are younger than employed women, and on average, they have more schooling. For example, 
+      in 2001 employed rural females had an average of 5 years of schooling less than their unemployed counterparts. Unemployed men, on the other hand, 
+      are younger but they are less educated than employed men. This is manifested in the ratio of male/female unemployment rate which was 3.5 in 2001,
+      but 1.4 in 1999 for rural areas. Since most of Palestinian who worked in Israel came from villages and had fewer years of education, the wage gap 
+      is mostly attributable to mobility restrictions between Israel and the Palestinian labor markets. Female participation rates dropped the most in 
+      rural areas (2.8 percentage points between the two years) where the employed/unemployed schooling gap is the largest.
+      <br></br>
   </div>
 </section>
 <footer>
