--- a/index6.html
+++ b/index6.html
@@ -111,7 +111,7 @@
 
             <h1>Phone Number </h1>
 
-            <h4>917-545-2916</h4>
+            <h4>... ... ....</h4>
 
             
 
@@ -127,7 +127,7 @@
 
             <h1>Email</h1>
 
-            <h4>samuelclarke672@gmail.com</h4>
+            <h4>.........................</h4>
 
           </div>
 
@@ -141,7 +141,7 @@
 
             <h1>Address</h1>
 
-            <h4>New York City / Brooklyn</h4>
+            <h4>New York City</h4>
 
           </div>
 
