--- a/globalissueboostrap/public_html/index6.html
+++ b/globalissueboostrap/public_html/index6.html
@@ -141,7 +141,7 @@
 
             <h1>Address</h1>
 
-            <h4>New York City</h4>
+            <h4>New York City/United States of America</h4>
 
           </div>
 
